# Docencia

./: .gitignore  README.md
codigos_matlab/: Datos_Espaciales.mlx  Lectura_Limpieza.mlx  Track2.csv  bati_240115110238_X1819.CSV  main.py  pyproject.toml  pytomat.ipynb  pytomat.py
integral_numerica/python/: functions.py  integral_numerica.ipynb  pruebas_codigo.ipynb
material_tareas/taller_investigacion_ciencias_ambientales_I/: proxima_tarea.ipynb
powershell_script/: psDownloadData.ps1  ps_scriptE.ps1
scripts_de_automatizacion/: psDD2.ps1  psHCHDownloadDataAviso.ps1  psIWRDownloadDataHycom.ps1
scripts_de_automatizacion/matlab/: HYCOMnc2txtS.m
scripts_descarga_datos/: README.md
scripts_descarga_datos/descargar_datos_matlab/: HYCOM_TSIS_GOMb0_01_Reanalysis_script_matlab.m  README.md  hycom_tsis_gome0p01_1s100_daily.m  hycom_tsis_gome0p01_1s100_hourly.m  linkHycom.md  (+2 more)
scripts_descarga_datos/descargar_datos_python/: README.md  extract_hycomm1s100.py  extract_hycomm1s100async.py  main.py  pyproject.toml  scraperHYCOMM1-100.py
scripts_descarga_datos/descargar_datos_python/asincrono/: asynhttpxhycom.py  extract_hycomm1s100async.py  pull_async_dataset_hycom_tsis_gomb0p01_1s100.py
scripts_descarga_datos/descargar_datos_python/secuencial/: download_hycom.py  fetch_data_hycomm.py  pull_dataset_hycom1s100.py  pull_dataset_hycom_tsis_gomb0p01_1s100.py  pull_dataset_hycom_tsis_gome0p04_1s25.py  reqDAta.py
scripts_descarga_datos/descargar_datos_python/servicio_social/: scraper.py
scripts_descarga_datos/descargar_datos_python/test/: extract_hycomm1s100_test.py
(+741 files in other folders)
