[project]
name = "descargar-datos-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "httpx>=0.28.1",
    "mypy>=1.16.1",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.4",
    "ruff>=0.12.0",
]
